--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 /* doc/src/sgml/stylesheet.css */
 
 /* color scheme similar to www.postgresql.org */
@@ -5,7 +7,7 @@
 BODY {
 	color: #000000;
 	background: #FFFFFF;
-	font-family: verdana, sans-serif;
+	font-family: "Malgun Gothic", "Nanum Gothic", "맑은 고딕", "나눔 고딕", verdana, sans-serif;
 }
 
 A:link		{ color:#0066A2; }
