--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,3 @@
-@charset "UTF-8";
-
 /* doc/src/sgml/stylesheet.css */
 
 /* color scheme similar to www.postgresql.org */
@@ -7,7 +5,7 @@
 BODY {
 	color: #000000;
 	background: #FFFFFF;
-	font-family: "Malgun Gothic", "Nanum Gothic", "맑은 고딕", "나눔 고딕", verdana, sans-serif;
+	font-family: verdana, sans-serif;
 }
 
 A:link		{ color:#0066A2; }
@@ -56,10 +54,6 @@ H6 {
 	font-weight: normal;
 }
 
-P {
-	line-height: 1.5;
-}
-
 /* center some titles */
 
 .BOOK .TITLE, .BOOK .CORPAUTHOR, .BOOK .COPYRIGHT {
@@ -93,23 +87,6 @@ DIV.EXAMPLE {
 
 PRE.LITERALLAYOUT, .SCREEN, .SYNOPSIS, .PROGRAMLISTING {
 	margin-left: 4ex;
-  -moz-box-shadow: 3px 3px 5px #DFDFDF;
-  -webkit-box-shadow: 3px 3px 5px #DFDFDF;
-  -khtml-box-shadow: 3px 3px 5px #DFDFDF;
-  -o-box-shadow: 3px 3px 5px #DFDFDF;
-  box-shadow: 3px 3px 5px #DFDFDF;
-  border-color: #CFCFCF;
-  background-color: #F7F7F7;
-  color: black;
-  border-width: 1px;
-  border-style: solid;
-  padding: 2ex;
-  margin: 2ex 0 2ex 2ex;
-  overflow: auto;
-  -moz-border-radius: 8px;
-  -webkit-border-radius: 8px;
-  -khtml-border-radius: 8px;
-  border-radius: 8px;
 }
 
 .COMMENT	{ color: red; }
